--- a/css/addEmployee.css
+++ b/css/addEmployee.css
@@ -114,3 +114,15 @@ html body {
 .gender-label #female {
   margin-left: 2rem;
 }
+/* Date */
+select {
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px; 
+  resize: vertical;
+  font: normal normal normal 16px Roboto;
+  letter-spacing: 0px;
+  color: #42515f;
+  background-color: transparent;
+  margin: 0 0.15rem;
+}
