--- a/css/addEmployee.css
+++ b/css/addEmployee.css
@@ -161,6 +161,56 @@ select {
     background-color: #82a70c;
     color: white;
   }
+  /* Media Queries */
+@media only screen and (min-width: 726px) {
+    .salary-group input {
+      min-width: 350px;
+    }
+  }
+  @media only screen and (max-width: 600px) {
+    .form {
+      margin-top: 10px;
+    }
+    .form-head {
+      text-align: center;
+    }
+    .label {
+      min-width: 100px;
+    }
+    .profile-radio-content {
+      grid-template-columns: 1fr 2fr;
+      gap: 0.5rem;
+    }
+    .gender-label {
+      gap: 0.5rem;
+    }
+    .department-group {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+    }
+    .salary-group {
+      display: flex;
+      flex-direction: column;
+    }
+    select {
+      margin-bottom: 0.5rem;
+    }
+    .submit-reset {
+      width: 100%;
+      display: flex;
+      flex-grow: 1;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      margin-bottom: 20px;
+    }
+    .submitButton {
+      margin: 0;
+    }
+    .button-parent {
+      flex-direction: column-reverse;
+      align-items: flex-start;
+    }
+  }
   @media only screen and (max-width: 960px) {
     .form {
       width: 85%;
